publish_log_4.txt

> Configure project :
Fabric Loom: 1.15.4

> Task :compileJava FAILED
E:\Minecraft Project\DasikLibrary\src\main\java\net\dasik\social\util\StochasticUtil.java:37: error: illegal start of expression
    public static boolean getAmplifiedProbability(float baseProbability, int multiplierPercent, RandomSource random) {
    ^
1 error

[Incubating] Problems report is available at: file:///E:/Minecraft%20Project/DasikLibrary/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  E:\Minecraft Project\DasikLibrary\src\main\java\net\dasik\social\util\StochasticUtil.java:37: error: illegal start of expression
      public static boolean getAmplifiedProbability(float baseProbability, int multiplierPercent, RandomSource random) {
      ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 1s
1 actionable task: 1 executed
